# Office-PowerPoint-MCP-Server

./: .gitignore  Dockerfile  README.md  enhanced_slide_templates.json  mcp-config.json  mcp_all_tools_templates_effects_demo.pptx  ppt_mcp_server.py  ppt_utils.py  pyproject.toml  requirements.txt  setup_mcp.py  slide_layout_templates.json
templates/: demo.pptx
tools/: __init__.py  chart_tools.py  connector_tools.py  content_tools.py  enhanced_template_tools.py  hyperlink_tools.py  master_tools.py  presentation_tools.py  professional_tools.py  structural_tools.py  template_tools.py  transition_tools.py
utils/: content_utils.py  enhanced_template_utils.py  template_utils.py
